[package]
name = "h3"
version = "0.0.6"
rust-version = "1.70"
authors = [
    "Sean McArthur <sean@seanmonstar.com>",
    "Jean-Christophe BEGUE <jc.begue@pm.me>",
]
license = "MIT"
edition = "2021"
documentation = "https://docs.rs/h3"
repository = "https://github.com/hyperium/h3"
readme = "../README.md"
description = "An async HTTP/3 implementation."
keywords = ["http3", "quic", "h3"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]

[features]
default = ["std"]
std = []
i-implement-a-third-party-backend-and-opt-into-breaking-changes = []
tracing = ["dep:tracing"]

[dependencies]
bytes = { path = "../../bytes", features = ["no_std_io"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
http = "1"
tokio = { version = "1", features = ["sync"] }
pin-project-lite = { version = "0.2", default-features = false }
tracing = {version = "0.1.40", optional = true}
fastrand = "2.0.1"
spin = "0"
no_std_io = "0.5"
hashbrown = "0.15.2"

[dev-dependencies]
assert_matches = "1.5.0"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
proptest = "1"
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
quinn-proto = { version = "0.11", default-features = false }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std"] }
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
futures = { version = "0.3.28" }
tokio-util = { version = "0.7.9" }
h3-datagram = {path = "../h3-datagram" }